Solución error de mapeo para CourseDetailsDTO